<resources>
    <string name="app_name">FundMe</string>
    <string name="splash_title">Codealizer Studios</string>
    <string name="facebook_app_id">330485700642563</string>
    <string name="fund_me">Fund Me</string>
    <string name="text_login_logo_subtitle">a simpler way to donate</string>
    <string name="text_login_sign_up_button">Sign Up</string>
    <string name="text_login_more_info_button">More Info</string>
    <string name="text_login_facebook_button">login with facebook</string>
    <string name="text_login_google_button">login with google</string>
    <string name="text_login_title">Already have an account?</string>
    <string name="text_login_button">Login here</string>
    <string name="content_description_login_logo">login logo image</string>
    <string name="content_description_login_background">login background</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to startLogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="campaigns">Campaigns</string>
    <string name="title_items">My Items</string>
    <string name="card_profile_organizations_empty_title">No Organizations Found!</string>
    <string name="card_profile_items_empty_text">No Items found!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="gender_entries">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="gender_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_create_item">Create an item</string>
    <string name="title">Title</string>
    <string name="create_item_title_text">Name of item</string>
    <string name="create_item_description_text">Description</string>
    <string name="create_item_price_text">Price</string>
    <string name="create_item_location_text">Location (Zip Code)</string>
    <string name="location_permission_rationale">Your location will be used to retrieve your current location</string>
    <string name="title_activity_create_organization">Create an Organization</string>
    <string name="create_organization_title_text">Name of orgnaization</string>
    <string name="create_organization_description_text">Description</string>
    <string name="create_organization_price_text">Goal</string>
    <string name="create_organization_location_text">Location (Zip Code)</string>
    <string name="create_organization_link_text">Link</string>
    <string name="title_activity_view_item">Item</string>
    <string name="title_activity_view_organization">Organization</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Notifications</item>
        <item>Shop</item>
    </string-array>

    <string-array name="shop_item_names">
        <item>10 Credits</item>
        <item>20 Credits</item>
        <item>50 Credits</item>
        <item>75 Credits</item>
        <item>100 Credits</item>
    </string-array>

    <string-array name="shop_item_prices">
        <item>$10.00</item>
        <item>$20.00</item>
        <item>$50.00</item>
        <item>$75.00</item>
        <item>$100.00</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_profile">Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="title_activity_view_user">User</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_shop">Shop</string>
    <string name="shop_title">In the shop, you can purchase virtual credits which you can then use to buy items, and support your favorite charities and organizations</string>
    <string name="title_activity_members">Members</string>
</resources>
