<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="net.codealizer.fundme.ui.main.CreateItemActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_create_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="net.codealizer.fundme.ui.main.CreateItemActivity"
        tools:showIn="@layout/activity_create_item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/create_item_picture"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerCrop"
                android:src="@mipmap/new_item_placeholder" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/create_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_item_title_text"
                    android:inputType="textCapWords"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:counterEnabled="true"
                app:counterMaxLength="300">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/create_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_item_description_text"
                    android:inputType="text"
                    android:maxLength="300"
                    android:maxLines="3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/create_item_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/create_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_item_price_text"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <mabbas007.tagsedittext.TagsEditText
                    android:id="@+id/create_item_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tags"
                    android:inputType="text"
                    TagsEditText:allowSpaceInTag="true"
                    TagsEditText:tagsBackground="@drawable/square"
                    TagsEditText:tagsCloseImageLeft="@drawable/dot"
                    TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"
                    TagsEditText:tagsCloseImageRight="@drawable/tag_close"
                    TagsEditText:tagsTextColor="@color/md_white_1000"
                    TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="80">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/create_item_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_item_location_text"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/create_item_select_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_weight="20"
                    android:src="@drawable/ic_location" />
            </LinearLayout>


            <Button
                android:id="@+id/create_item_save"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="Save"
                android:theme="@style/AppTheme.AccentButton" />
        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_item_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/create_item_picture"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ripple"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchor="@id/create_item_picture"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_camera" />

</android.support.design.widget.CoordinatorLayout>
